# NovelWriter

./: .gitignore  README.md  pyproject.toml
.smoke-projects/090c9569/规范/: 写作规范.md  项目Soul.md
backend/: app_version.py  backends.json.example  config.example.json  config.py  main.py  requirements.txt
backend/ai/: blazeai_adapter.py  compat.py  model_router.py  openai_provider.py  provider.py
backend/api/: agent.py  characters.py  entity_versions.py  files.py  foreshadowing.py  memory.py  plan_notes.py  plans.py  projects.py  settings.py  skills.py  soul.py  timeline.py
backend/core/: character_states.py  pending_changes.py
backend/core/agent/: compression.py  context.py  engine.py  execution_plan.py  intent.py  message_classifier.py  reasoning.py  tool_runner.py
backend/core/memory/: candidates.py  embedding_health.py  embeddings.py  evolutionary.py  graph.py  stack.py  tools.py  vector_search.py
backend/core/presets/: __init__.py  api.py  context.py  definitions.py
backend/core/skills/: assets.py  project_state.py  registry.py  tools.py  trigger.py
backend/core/tools/: __init__.py  catalog.py  character_tools.py  control_tools.py  deep_thinking_tools.py  (+11 more)
backend/db/: database.py  schema.sql
backend/models/: chat.py  file_node.py  project.py  tools.py
backend/tests/: support.py  test_agent_intent.py  test_skills_reasoning_settings.py  test_version.py
backend/utils/: diff.py  token_estimator.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  global.css  main.tsx  version.ts
(+137 files in other folders)
